Fixed navigation bar by doing a flex-wrap for when the page is smaller

--- a/assets/style.css
+++ b/assets/style.css
@@ -15,6 +15,10 @@ header {
 nav ul {
   list-style: none;
   padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 nav ul li {
